Fix all alignment of first header

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ header{
     /* margin: 0 auto; */
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
-    margin-left: 40px;
+    margin-left: 20px;
 }
 h1{
     background-color: lavender;
@@ -45,7 +45,7 @@ nav a{
 .firstImage {
     width: 350px;
     height: auto;
-    margin-left: 50px;
+    margin-left: 20px;
     border: 5px rgb(128, 92, 136);
     /* margin-right: 100px; */
 }
